RESOLVED FIXED188355
Regression(NetworkLoadChecker): CORS preflights are no longer able to deal with client certificate authentication
https://bugs.webkit.org/show_bug.cgi?id=188355
Summary Regression(NetworkLoadChecker): CORS preflights are no longer able to deal wi...
Chris Dumez
Reported 2018-08-06 13:51:16 PDT
CORS preflights are no longer able to deal with client certificate authentication since we've moved CORS-preflighting to the network process.
Attachments
Patch (11.51 KB, patch)
2018-08-06 13:57 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-08-06 13:51:31 PDT
Chris Dumez
Comment 2 2018-08-06 13:57:20 PDT
Alex Christensen
Comment 3 2018-08-06 14:30:07 PDT
Comment on attachment 346654 [details] Patch r=me. This fixes a bug similar to https://bugs.webkit.org/show_bug.cgi?id=186402
WebKit Commit Bot
Comment 4 2018-08-06 15:14:12 PDT
Comment on attachment 346654 [details] Patch Clearing flags on attachment: 346654 Committed r234626: <https://trac.webkit.org/changeset/234626>
WebKit Commit Bot
Comment 5 2018-08-06 15:14:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.