Source/WebKit/NetworkProcess/NetworkCORSPreflightChecker.h
@@ -47,6 +47,8 @@ public:
         String referrer;
         String userAgent;
         PAL::SessionID sessionID;
+        uint64_t pageID;
+        uint64_t frameID;
         WebCore::StoredCredentialsPolicy storedCredentialsPolicy;
     };
     using CompletionCallback = CompletionHandler<void(WebCore::ResourceError&&)>;
